--- a/branches/zend/public/css/tagCloud.scss
+++ b/branches/zend/public/css/tagCloud.scss
@@ -15,7 +15,7 @@
 .itemItems, .userItems {
   .displayOptions {
     form {
-      width: 18em;
+      width: 19em;
       .field {
         label {
           width: 5.5em;
@@ -34,16 +34,20 @@
             width: 4.5em;
           }
           label, select, .label {
-            float: left;
+            @include inlineBlock();
             margin-bottom: 0.25em;
           }
           label, .label {
             padding: 0 0.25em;
           }
         }
+        .perPage {
+          border: none;
+        }
         .highlightCount {
-          float: right;
-          display: block;
+          width:  7em;
+          float:  right;
+          display:block;
           label.above {
             width: auto;
           }
@@ -62,8 +66,7 @@
           font-weight: bold;
         }
         .option, .comma {
-          display: block;
-          float: left;
+          @include inlineBlock();
         }
         .option.control {
           position: relative;
